--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "",
   "main": "init.js",
   "scripts": {
-    "start": "node --harmony-async-await  server.js"
+    "server": "nodemon register",
+    "client": "node scripts/development.js",
+    "build": "NODE_ENV=build webpack --config scripts/webpack.config.js -p --progress --colors"
   },
   "author": "Andrus Asumets <andrus@asumets.ee>",
-  "license": "MIT",
+  "license": "",
   "dependencies": {
-    "async-child-process": "^1.1.1",
-    "atob": "^2.0.3",
-    "babel-core": "^6.25.0",
     "babel-polyfill": "^6.23.0",
-    "bluebird": "^3.5.0",
+    "fastclick": "^1.0.6",
     "forever": "^0.15.3",
     "kcors": "^2.2.1",
     "koa": "^2.2.0",
@@ -22,23 +21,31 @@
     "koa-bodyparser": "^4.2.0",
     "koa-cors": "^0.0.16",
     "koa-force-ssl": "0.0.5",
-    "koa-multer": "^1.0.1",
     "koa-router": "^7.2.1",
-    "koa-router-multer": "^1.3.0",
     "koa-socket": "^4.4.0",
-    "koa-sslify": "^2.1.2",
     "koa-static": "^4.0.1",
-    "mysql": "^2.14.1",
     "nodemon": "^1.11.0",
-    "promise-mysql": "^3.0.2",
+    "pathfinding": "^0.4.18",
     "querystring": "^0.2.0",
-    "url": "^0.11.0"
+    "raf.js": "0.0.4",
+    "socket.io-client": "^2.0.3",
+    "url": "^0.11.0",
+    "window-or-global": "^1.0.1"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-regenerator": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-es2015-node5": "^1.2.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.5.4",
+    "webpack-dev-server": "^2.7.1"
   }
 }
