--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "",
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "cors": "^2.8.4",
+    "express": "^4.15.4",
     "fastclick": "^1.0.6",
     "forever": "^0.15.3",
     "kcors": "^2.2.1",
@@ -29,6 +31,7 @@
     "querystring": "^0.2.0",
     "raf.js": "0.0.4",
     "socket.io-client": "^2.0.3",
+    "timesync": "^0.4.0",
     "url": "^0.11.0",
     "window-or-global": "^1.0.1"
   },
