--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "koa-socket": "^4.4.0",
     "koa-static": "^4.0.1",
     "pathfinding": "^0.4.18",
-    "socket.io-client": "^2.0.3",
+    "socket.io-client": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
