--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "init.js",
   "scripts": {
     "server": "nodemon transpile-server",
-    "client": "node scripts/development.js",
+    "client": "node development.js",
     "build": "NODE_ENV=build webpack --config scripts/webpack.config.js -p --progress --colors"
   },
   "author": "Andrus Asumets <andrus@asumets.ee>",
   "license": "",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "koa": "^2.2.0",
     "koa-router": "^7.2.1",
     "koa-socket": "^4.4.0",
@@ -23,7 +24,9 @@
     "babel-loader": "^7.1.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
     "nodemon": "^1.11.0",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.4",
