--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "",
   "dependencies": {
     "dotenv": "^4.0.0",
+    "jquery": "^3.2.1",
     "koa": "^2.2.0",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.2.1",
