--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Andrus Asumets <andrus@asumets.ee>",
   "license": "",
   "dependencies": {
+    "disable-scroll": "^0.3.0",
     "dotenv": "^4.0.0",
     "jquery": "^3.2.1",
     "koa": "^2.2.0",
@@ -20,6 +21,7 @@
     "koa-router": "^7.2.1",
     "koa-socket": "^4.4.0",
     "koa-static": "^4.0.1",
+    "lodash.throttle": "^4.1.1",
     "pathfinding": "^0.4.18",
     "socket.io-client": "^2.0.3"
   },
