--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "koa-socket": "^4.4.0",
     "koa-static": "^4.0.1",
     "pathfinding": "^0.4.18",
+    "pathval": "^1.1.0",
     "socket.io-client": "^2.0.3"
   },
   "devDependencies": {
