--- a/.env.default
+++ b/.env.default
@@ -2,3 +2,5 @@ WS_DEVELOPMENT_SERVER=localhost
 WS_DEVELOPMENT_PORT=1337
 WS_PRODUCTION_SERVER=localhost
 WS_PRODUCTION_PORT=3000
+WS_SERVER=localhost
+WS_PORT=1337
