basic match making & save messages to couchdb

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "init.js",
   "scripts": {
-    "server": "forever -w --watchDirectory src transpile-server.js",
+    "server": "forever -w transpile-server.js",
     "client": "node development.js",
     "env": "cp .env.default .env",
     "build": "NODE_ENV=build webpack --config scripts/webpack.config.js -p --progress --colors",
@@ -14,6 +14,7 @@
   "license": "",
   "dependencies": {
     "dotenv": "^4.0.0",
+    "express": "^4.16.2",
     "jquery": "^3.2.1",
     "koa": "^2.2.0",
     "koa-bodyparser": "^4.2.0",
@@ -21,6 +22,7 @@
     "koa-socket": "^4.4.0",
     "koa-static": "^4.0.1",
     "pathfinding": "^0.4.18",
+    "pouchdb": "^6.3.4",
     "socket.io-client": "^2.0.3"
   },
   "devDependencies": {
