--- a/package.json
+++ b/package.json
@@ -4,24 +4,20 @@
   "description": "",
   "main": "init.js",
   "scripts": {
-    "server": "forever -w transpile-server.js",
+    "server": "echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p && forever -w transpile-server.js",
     "client": "node development.js",
     "env": "cp .env.default .env",
     "build": "NODE_ENV=build webpack --config scripts/webpack.config.js -p --progress --colors",
-    "production": "forever -w --watchDirectory src transpile-production.js"
   },
   "author": "Andrus Asumets <andrus@asumets.ee>",
   "license": "",
   "dependencies": {
-    "deferred-interval": "^0.1.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
-    "jquery": "^3.2.1",
     "pathfinding": "^0.4.18",
     "pouchdb": "^6.3.4",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
-    "tick-tock": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
