--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "pathfinding": "^0.4.18",
     "pouchdb": "^6.3.4",
     "socket.io": "^2.0.3",
-    "socket.io-client": "^2.0.3",
+    "socket.io-client": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
