--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Andrus Asumets <andrus@asumets.ee>",
   "license": "",
   "dependencies": {
+    "compression": "^1.7.1",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "pathfinding": "^0.4.18",
