--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "init.js",
   "scripts": {
+  	"production": "forever transpile-server.js",
     "server": "echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p && forever -w transpile-server.js",
     "client": "node development.js",
     "env": "cp .env.default .env",
