enable timeout reset only in prodution

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "init.js",
   "scripts": {
-  	"production": "forever transpile-server.js",
-    "server": "echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p && forever -w transpile-server.js",
+    "production": "forever transpile-server.js",
+    "server": "forever -w transpile-server.js",
     "client": "node development.js",
     "env": "cp .env.default .env",
     "build": "NODE_ENV=build webpack --config scripts/webpack.config.js -p --progress --colors"
